  AbstractRemoteEntityConnection.disconnect() returns if already disconnected
  Databases.closeSilently() no longer varargs
  .idea directory removed
  module-info.java files added and fixed
  Version info moved from build.gradle to gradle.properties as frameworkVersion
  Idea and aggregate javadoc plugins removed from gradle build, combinedJavadoc task added
  DefaultPropertyFilterModel.getComparable() bug fixed, did not handle denormalized properties based on Entity instances
  Jetty dependency upgraded to 9.4.8.v20171121
  populateWiki task added to gradle build
  Gradle build compile and testCompile replaced with implementation and testImplementation for internal modules, dependencies fixed accordingly
  Dependency report added to wiki
  Logback and slf4j dependencies upgraded to 1.2.3 and 1.7.25 respectively
  Gradle build compile and testCompile replaced with implementation and testImplementation for external modules, dependencies fixed accordingly
  A few external dependency upgrades
  ValidationDocumentFilter added
  Gradle build refactoring, java9 stuff removed for now
  Gradle 'api' dependency introduced to common modules, common-server-http jetty dependencies reduced to minimum
  Gradle 'api' dependency introduced to framework modules, dependencies cleaned up
  Gradle 'api' dependency introduced to javafx, swing and plugin modules, dependencies cleaned up
  Gradle build refactoring, demo project stuff removed from root build file
  EntityService now handles forwarded requests
  Version bug fixed, could not handle non-snapshot versions
  Version 0.11.0 released
0.11.1
  Entities domain model now provided by the EntityConnection and EntityConnectionProvider, relevant classes now implement Serializable with non-client related fields transient
  EntityConnectionProvider.CLIENT_DOMAIN_CLASS string configuration value added, for domain model loading
  Annotation based domain modelling scrapped
  Entity.OrderBy added, string based order by clauses outlawed